feature: 유저 정보 상세 조회 화면 구현

--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -8,6 +8,7 @@
   background-color: #4f6f52 !important;
   color: #fff !important;
 }
+.custom-select .ant-select-open,
 .custom-table .ant-table-thead > tr > th {
   background-color: #e1ecdc;
 }
