--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -1,8 +1,9 @@
 #root {
-  max-width: 1280px;
-  margin: 0 auto;
-  padding: 2rem;
-  text-align: center;
+  height: 100%;
+  width: 100%;
+  margin: 0;
+  padding: 0;
+  font-family: Arial, sans-serif;
 }
 
 .logo {
@@ -39,4 +40,43 @@
 
 .read-the-docs {
   color: #888;
+}
+
+.ant-layout {
+  min-height: 100vh;
+  display: flex;
+  flex-direction: column;
+}
+
+.ant-layout-header {
+  position: fixed;
+  width: 100%;
+  z-index: 1;
+  padding: 0 20px;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  background-color: white;
+}
+
+.ant-layout-sider {
+  flex: 0 0 200px;
+}
+
+.ant-layout-content {
+  margin-top: 64px;
+  padding: 20px;
+  flex-grow: 1;
+  background-color: #f0f2f5;
+}
+
+.table-container {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  min-height: 100%;
+}
+
+.ant-table-wrapper {
+  flex-grow: 1;
 }
